# talkie

./: .gitignore  .progress.md  AGENTS.md  Readme.md  architecture.md  components.json  index.html  markdown-implementation.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  项目方案.md
docs/: architecture.md  key-design-decisions.md  mcp-plan.md  store.rs 拆分方案建议.md  stores.spec.ts 拆分方案建议.md  tech-debt-2026-07-01.md  text-attachment-plan.md  ui-spec.md  核心长文件拆分分析报告.md
e2e/specs/: chat.spec.ts
scripts/: gen-icons.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mcp-servers/bocha-search/: index.js
src-tauri/src/: config.rs  crypto.rs  error.rs  lib.rs  llm.rs  main.rs  models.rs  store.rs
src-tauri/src/chat/: engine.rs  mod.rs  search.rs
src-tauri/src/commands/: chat.rs  conversation.rs  mcp.rs  mod.rs  prompt.rs  settings.rs
src-tauri/src/mcp/: client.rs  jsonrpc.rs  mod.rs  pool.rs  runtime.rs
src-tauri/src/store/: chat.rs  mcp.rs  migrations.rs  mod.rs  prompt.rs
src-tauri/tests/: chat_test.rs  llm_test.rs  mcp_integration.rs  search_e2e.rs  settings_test.rs  test_connection.rs
src-tauri/tests/fixtures/: bocha-mcp-server-empty.js  bocha-mcp-server.js  mock-mcp-server.js
src/__tests__/: bridge.spec.ts  setup.ts  stores.spec.ts
src/bridge/: chat.ts  conversation.ts  log.ts  mcp.ts  prompt.ts  settings.ts
src/composables/: useAttachment.ts  useMessageRender.ts  useModelSelect.ts  usePromptSelect.ts  useSearchSelect.ts
(+68 files in other folders)
