[package]
name = "talkie"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "talkie-app"
path = "src/main.rs"

[lib]
name = "talkie"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
tokio-util = { version = "0.7" }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
keyring = "3"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
rmcp = { version = "2.1", features = [
    "client",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
] }

[dev-dependencies]
mockito = "1.7.2"
